--- a/style.css
+++ b/style.css
@@ -80,6 +80,11 @@ textarea{
 .grid-item {
   background-color: rgba(255, 255, 255, 0.8);
   border: 1px solid rgba(0, 0, 0, 0.8);
-  padding: 20px;
+  padding: 45px;
   font-size: 30px;
   text-align: center;
+}
+
+.grid-sides {
+  grid-template-columns: ;
+}
